--- a/Test/makefile
+++ b/Test/makefile
@@ -1,11 +1,11 @@
-IDIR=../include
-ENGINC=../../Engine/include
+IDIR=include
+ENGINC=../Engine/include
 CC=g++
 CFLAGS= -g -std=c++11 -I $(IDIR) -I $(ENGINC) -I/usr/local/opt/libxml2/include/libxml2
 
 LIBS=-lGLEW -lglfw -framework OpenGL -lxml2 -L/usr/local/opt/libxml2/lib
 
-ODIR=.obj
+ODIR=src/.obj
 DEPDIR=$(ODIR)/.dep
 DEPFLAGS=-MT $@ -MMD -MP -MF $(DEPDIR)/$*.Td
 POSTCOMPILE = mv -f $(DEPDIR)/$*.Td $(DEPDIR)/$*.d && touch $@
@@ -13,7 +13,7 @@ POSTCOMPILE = mv -f $(DEPDIR)/$*.Td $(DEPDIR)/$*.d && touch $@
 FINDSRC=$(shell find . -type f -name "*.cpp")
 SRCS=$(FINDSRC:./%.cpp=%.cpp)
 OBJ=$(SRCS:%.cpp=$(ODIR)/%.o)
-OBJ+=../../Engine/lib/Engine.o
+OBJ+=../Engine/lib/Engine.o
 DEPS=$(SRCS:%.cpp=$(DEPDIR)/%.d)
 
 COMPILE.c=$(CC) $(DEPFLAGS) $(CFLAGS) -c
@@ -24,7 +24,7 @@ $(ODIR)/%.o: %.cpp $(DEPDIR)/%.d | $(DEPDIR)
 	$(COMPILE.c) -o $@ $<
 	$(POSTCOMPILE)
 
-Game: $(OBJ)
+Test: $(OBJ)
 	$(CC) -g -o $@ $^ $(LIBS)
 
 $(DEPS):
